--- a/rmarkdown/intial_plots.Rmd
+++ b/rmarkdown/intial_plots.Rmd
@@ -14,6 +14,9 @@ ggplot(data = mpg)+
 ```{r}
 smaller <- diamonds %>% 
   filter(carat <= 2.5)
+
+nrow(diamonds)
+ncol(diamonds)
 ```
 
 We have data about r nrow(diamonds) diamonds. Only r nrow(diamonds) - nrow(smaller) are larger than 2.5 carats. The distribution of the remainder is shown below:
